--- a/style.css
+++ b/style.css
@@ -180,7 +180,8 @@ nav {
 .menu-collapse {
     background-color: rgba(54, 54, 59, 0.801);
     width: 100%;
-    visibility: collapse;
+    /* visibility: collapse; */
+    display: none;
 }
 
 .nav-list {
@@ -362,7 +363,7 @@ nav {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     padding-top: 100px;
     left: 0;
     top: 0;
