--- a/style.css
+++ b/style.css
@@ -228,6 +228,18 @@ nav {
 
 }
 
+.flag {
+    width: 50px;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+}
+
+.flag:hover {
+    box-shadow: 0px 0px 30px 4px gray;
+    transform: scale(1.06);
+}
+
 .img-profil {
     margin-top: 20vh;
     width: 200px;
